--- a/style.css
+++ b/style.css
@@ -1,14 +1,33 @@
-body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(10, 10, 10);
+body {
+margin: 0;
 }
 
-canvas{
-    background-color: black;
+
+.background {
+    margin: 0;
+	background-image: url('img/9_intro_outro_screens/overlay.jpg');
+	background-position: center;
+	background-size: cover;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: rgb(10, 10, 10);
+	color: aliceblue;
+    height: 100vh;
+    width: auto;
+}
+canvas {
+	background-color: black;
 }
 
-.d_none{
-    display: none;
+.d_none {
+	display: none;
+}
+
+#gameText {
+	background-color: yellow;
+	color: aqua;
+	width: '720';
+	height: '480';
 }
