--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
 	margin: 0;
+	font-family: "zabras",Arial, Helvetica, sans-serif;
 }
 
 .background {
@@ -33,6 +34,10 @@ canvas {
 	color: rgb(0, 0, 0);
 	width: 720px;
 	height: 480px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	
 }
 
 .overlay_game_screen_won {
