--- a/style.css
+++ b/style.css
@@ -243,10 +243,14 @@ button {
 	padding: 24px;
 	display: none;
 	place-items: center;
-	background: rgba(0, 0, 0, 0.8);
+	background: rgb(0, 0, 0);
 	color: #fff;
 	z-index: 999;
 	text-align: center;
+}
+.orientation-warning p {
+  font-size: 36px;
+
 }
 
 .orientation-warning.show {
